<resources>
    <string name="app_name">Kakulator</string>
    <string name="settings">Settings</string>
    <string name="top_ten">Top Ten</string>
    <array name="Countries">
        <item>UNITED STATES</item>
        <item>OMAN</item>
        <item>LIBYA</item>
        <item>KUWAIT</item>
        <item>UNITED KINGDOM</item>
        <item>EURO</item>
        <item>SWITZERLAND</item>
        <item>BRUNEI</item>
        <item>BAHRAIN</item>
        <item>NIGERIA</item>
        <item>AUSTRALIA</item>
        <item>AFGHANISTAN</item>
        <item>ARGENTINA</item>
        <item>BOSNIA AND HERZEGOVINA</item>
        <item>BULGARIA</item>
        <item>BOLIVIA</item>
        <item>BRAZIL</item>
        <item>BELARUS</item>
        <item>CANADA</item>
        <item>CHILE</item>
        <item>CHINA</item>
        <item>COLOMBIA</item>
        <item>CUBA</item>
        <item>DENMARK</item>
        <item>EGYPT</item>
        <item>GHANA</item>
        <item>HONG KONG</item>
        <item>CROATIA</item>
        <item>HUNGARY</item>
        <item>ISRAEL</item>
        <item>INDIA</item>
        <item>JAPAN</item>
        <item>KENYA</item>
        <item>MEXICAN</item>
        <item>NORWAY</item>
        <item>POLAND</item>
        <item>QATAR</item>
        <item>ROMANIA</item>
        <item>RUSSIA</item>
        <item>SAUDI ARABIA</item>
        <item>SWEDEN</item>
        <item>SYRIAN</item>
        <item>THAILAND</item>
        <item>TURKEY</item>
        <item>UKRAINE</item>
        <item>SOUTH AFRICA</item>
    </array>
    <array name="Abbreviations">
        <item>USD</item>
        <item>OMR</item>
        <item>LYD</item>
        <item>KWD</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>CHF</item>
        <item>BND</item>
        <item>BHD</item>
        <item>NGN</item>
        <item>AUD</item>
        <item>AFN</item>
        <item>ARS</item>
        <item>BAM</item>
        <item>BGN</item>
        <item>BOB</item>
        <item>BRL</item>
        <item>BYR</item>
        <item>CAD</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>COP</item>
        <item>CUP</item>
        <item>DKK</item>
        <item>EGP</item>
        <item>GHS</item>
        <item>HKD</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>ILS</item>
        <item>INR</item>
        <item>JPY</item>
        <item>KES</item>
        <item>MXN</item>
        <item>NOK</item>
        <item>PLN</item>
        <item>QAR</item>
        <item>RON</item>
        <item>RUB</item>
        <item>SAR</item>
        <item>SEK</item>
        <item>SYP</item>
        <item>THB</item>
        <item>TRY</item>
        <item>UAH</item>
        <item>ZAR</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
