...
                android:layout_gravity="center_vertical"
                android:textSize="13sp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_spinner"
                android:layout_weight="1"
                android:paddingRight="8dp"
                android:theme="@style/SpinnerStyle" />

        </LinearLayout>
    </LinearLayout>
...
